--- a/style.css
+++ b/style.css
@@ -1,4 +1,15 @@
 @import url('https://fonts.googleapis.com/css2?family=Bungee+Spice&family=Literata:wght@300&family=Lobster&family=Montserrat:wght@500;600&family=PT+Serif&family=Raleway:ital,wght@1,200&family=Ravi+Prakash&family=Texturina:wght@200&display=swap');
+
+:root{
+    --cor--primaria: #000000;
+    --cor--segundaria: #f6f6f6;
+    --cor--terciaria: #22778b;
+    --cor--hover: #272727;
+    --planodefundo--url:("assets/inovacao-e-tecnologia.jpg");
+    
+    
+}
+
 *{
     margin: 0;
     padding: 0;
@@ -7,18 +18,39 @@
 body{
     height: 100vh;
     box-sizing: border-box;
-    background-color:#000000;
-    color: #F6F6F6;
+    background-image: url("assets/inovacao-e-tecnologia.jpg");
+    color: var(--cor--segundaria);
 }
 .titulo-destaque {
-    color: #22778b;
+    color:var(--cor--terciaria);
+}
+.cabecalho{
+    padding: auto;
 
 }
+
+.cabecalho__menu{
+    display: flex;
+    gap: 80px;
+
+
+}
+.cabecalho__menu__link{
+    font-family: 'Ravi Prakash' ;
+    font-size: 1,5rem;
+    font-weight: 600;
+    color: var(--cor--terciaria);
+    text-decoration: none;
+    
+
+}
+
 .apresentacao {
-    margin: 10% 15%;
+    margin: 5% 5%;
     display: flex;
     align-items: center;
     justify-content: space-between;
+    gap: 80px;
 }
 .apresentacao__conteudo{
     width: 615px;
@@ -27,12 +59,14 @@ body{
     gap: 40px;
 }
 .apresentacao__conteudo__titulo{
-    font-size: 36px;
+    
+    font-size: 2.5rem;
     font-family: 'Ravi Prakash', cursive;
     font-weight: 400;
 
 }
 .apresentacao__conteudo__texto{
+    
     font-size: 24px;
     font-family: 'Texturina', serif;
 }
@@ -52,14 +86,63 @@ body{
 }
 .apresentacao__links__links{
     /* background-color: #22D4FD; */
-    border: 2px solid #12c968;
-    width: 387px;
+    gap: 16px;
+    border: 2px solid var(--cor--terciaria);
+    width: 200px;
     text-align: center;
-    border-radius: 16px;
-    font-size: 24px;
-    font-weight: 600;
-    padding: 21.5px 0px;
+    border-radius: 8px;
+    font-size: 1rem;
+    font-weight: 100;
+    padding: 15.5px 0px;
     text-decoration: none;
-    color: #F6F6F6;
+    color: var(--cor--segundaria);
     font-family: 'Montserrat', sans-serif;
+    
 }
+
+.apresentacao__links__links:hover {
+    background-color: var(--cor--hover);
+}
+
+.apresentacao__imagem{
+    width: auto;
+}
+
+.rodape{
+    gap: 16px;
+    padding: 2px;
+    color: hsl(0, 0%, 0%);
+    background-color: var(--cor--terciaria);
+    text-align: center;
+    font-family: 'Montserrat' , sans-serif;
+    font-size: 0,625rem;
+    font-weight: 400;
+}
+.apresentacao_form{
+    padding: 2% 0% 0% 15%;
+    
+}
+ .apresentacao_video{
+    padding: 2% 0% 0% 15%;
+ }
+
+ @media (max-width: 1200px){
+    .cabecalho{
+        padding: 10%;
+    }
+
+    .cabecalho__menu{
+        justify-content: center;
+    }
+    .apresentacao{
+        flex-direction: column-reverse;
+    }
+    .apresentacao__conteudo{
+        width: 100%;
+    }
+    .listaClass{
+        flex-direction: column-reverse;
+    }
+    
+
+ }
